// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-rate.vue Demo-允许半选 1`] = `
<div class="root">
  <span class="item" status="full">
    <span class="mask" style="width: 50%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 50%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 50%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 50%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 50%;"></span>
  </span>
</div>
`;

exports[`u-rate.vue Demo-允许清除 1`] = `
<div class="root">
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
  </span>
</div>
`;

exports[`u-rate.vue Demo-只读 1`] = `
<div class="root" readonly="readonly">
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
  </span>
</div>
`;

exports[`u-rate.vue Demo-只读，值为小数 1`] = `
<div>
  <div class="root" readonly="readonly">
    <span class="item" status="full">
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" status="full">
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" status="full">
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" half="true" status>
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" status>
      <span class="mask" style="width: 60%;"></span>
    </span>
  </div>
  <div class="root" readonly="readonly">
    <span class="item" status="full">
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" status="full">
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" status="full">
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" half="true" status>
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="item" status>
      <span class="mask" style="width: 60%;"></span>
    </span>
    <span class="text"> 3.6 </span>
  </div>
</div>
`;

exports[`u-rate.vue Demo-基本用法 1`] = `
<div>
  <div class="root">
    <span class="item" status>
      <span class="mask" style="width: 0%;"></span>
    </span>
    <span class="item" status>
      <span class="mask" style="width: 0%;"></span>
    </span>
    <span class="item" status>
      <span class="mask" style="width: 0%;"></span>
    </span>
    <span class="item" status>
      <span class="mask" style="width: 0%;"></span>
    </span>
    <span class="item" status>
      <span class="mask" style="width: 0%;"></span>
    </span>
  </div>
</div>
`;

exports[`u-rate.vue Demo-基本用法 2`] = `
<div class="root">
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
  </span>
</div>
`;

exports[`u-rate.vue Demo-辅助文字 1`] = `
<div class="root">
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
    <transition-stub class="popup" name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <div class="body" vusion-slot-name="default">
          一般
        </div>
      </div>
    </transition-stub>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
    <transition-stub class="popup" name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <div class="body" vusion-slot-name="default">
          一般
        </div>
      </div>
    </transition-stub>
  </span>
  <span class="item" status="full">
    <span class="mask" style="width: 0%;"></span>
    <transition-stub class="popup" name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <div class="body" vusion-slot-name="default">
          一般
        </div>
      </div>
    </transition-stub>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
    <transition-stub class="popup" name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <div class="body" vusion-slot-name="default">
          一般
        </div>
      </div>
    </transition-stub>
  </span>
  <span class="item" status>
    <span class="mask" style="width: 0%;"></span>
    <transition-stub class="popup" name="fade">
      <div class="root" merge-borders="true" style="display: none;">
        <span class="arrow" data-popper-arrow></span>
        <div class="body" vusion-slot-name="default">
          一般
        </div>
      </div>
    </transition-stub>
  </span>
  <span class="text">一般</span>
</div>
`;
